--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\tient\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
-j2ee.server.home=D:/Tools/NetBeans/Apache Software Foundation/Tomcat 10.0
-j2ee.server.instance=tomcat90:home=D:\\Tools\\NetBeans\\Apache Software Foundation\\Tomcat 10.0
+deploy.ant.properties.file=C:\\Users\\inuya\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.0
+j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.0
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\tient\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\inuya\\AppData\\Roaming\\NetBeans\\13\\build.properties
