--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,16 +35,16 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.commons-logging-1.2.jar=lib\\commons-logging-1.2.jar
-file.reference.fluent-hc-4.5.5.jar=lib\\fluent-hc-4.5.5.jar
-file.reference.gson-2.8.2.jar=lib\\gson-2.8.2.jar
-file.reference.httpclient-4.5.5.jar=lib\\httpclient-4.5.5.jar
-file.reference.httpcore-4.4.9.jar=lib\\httpcore-4.4.9.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.javax.mail.jar=lib\\javax.mail.jar
-file.reference.mysql-connector-j-8.0.32.jar=lib\\mysql-connector-j-8.0.32.jar
-file.reference.sqljdbc42.jar=lib\\sqljdbc42.jar
+file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
+file.reference.fluent-hc-4.5.5.jar=lib/fluent-hc-4.5.5.jar
+file.reference.gson-2.8.2.jar=lib/gson-2.8.2.jar
+file.reference.httpclient-4.5.5.jar=lib/httpclient-4.5.5.jar
+file.reference.httpcore-4.4.9.jar=lib/httpcore-4.4.9.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=lib/jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=lib/jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javax.mail.jar=lib/javax.mail.jar
+file.reference.mysql-connector-j-8.0.32.jar=lib/mysql-connector-j-8.0.32.jar
+file.reference.sqljdbc42.jar=lib/sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -105,6 +105,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=Project-SWP391.war
+war.name=Project-SWP391tuiter.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
