--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -105,6 +105,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=Project-SWP391tuiter.war
+war.name=Project-SWP391.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
